--- a/blogs.html
+++ b/blogs.html
@@ -193,7 +193,7 @@
       </div>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="C:\Users\HP\Desktop\bootstrap files/men and girl.jpg" class="d-block w-100" alt="...">
+          <img src="men and girl.jpg" class="d-block w-100" alt="...">
           <div class="carousel-caption d-none d-md-block">
             <h1>Welcome to best coding blog</h1>
             <p>best-coding-blog courses </p>
@@ -204,7 +204,7 @@
           </div>
         </div>
         <div class="carousel-item">
-          <img src="C:\Users\HP\Desktop\bootstrap files/keypad.jpg" class="d-block w-100" alt="...">
+          <img src="keypad.jpg" class="d-block w-100" alt="...">
           <div class="carousel-caption d-none d-md-block">
             <h1>learn to lead</h1>
             <button class="btn btn-danger">browse vedioes</button>
@@ -213,7 +213,7 @@
           </div>
         </div>
         <div class="carousel-item">
-          <img src="C:\Users\HP\Desktop\bootstrap files/stage.jpg" class="d-block w-100" alt="...">
+          <img src="stage.jpg" class="d-block w-100" alt="...">
           <div class="carousel-caption d-none d-md-block">
             <h1>Talking is cheap just tell me the code</h1>
             <p></p>
