--- a/blogs.html
+++ b/blogs.html
@@ -312,7 +312,7 @@
               <a href="#" class="stretched-link">Continue reading</a>
             </div>
             <div class="col-auto d-none d-lg-block">
-              <img class="bd-placeholder-img" width="300" height="250" src="">
+              <img class="bd-placeholder-img" width="300" height="250" src="la.jpg">
     
             </div>
           </div>
