--- a/aboutus.html
+++ b/aboutus.html
@@ -59,7 +59,7 @@
           <p class="lead">we started to help programmers and ethical hackers who were struggling.</p>
         </div>
         <div class="col-md-5 order-md-1">
-          <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" src="C:\Users\HP\Desktop\bootstrap files/hand.jpg">
+          <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" src="hand.jpg">
   
         </div>
       </div>
@@ -73,7 +73,7 @@
           <p class="lead">like a family.</p>
         </div>
         <div class="col-md-5 order-md-1">
-          <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" src="C:\Users\HP\Desktop\bootstrap files/la.jpg">
+          <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" src="la.jpg">
   
         </div>
       </div>
@@ -90,7 +90,7 @@
           <p class="lead">our plan is to gave you free courses.</p>
         </div>
         <div class="col-md-5 order-md-1">
-          <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" src="C:\Users\HP\Desktop\bootstrap files/keypad.jpg">
+          <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" src="keypad.jpg">
   
         </div>
       </div>
